# live-bootcamp-project

./: .gitignore  Cargo.toml  compose.override.yml  compose.yml
.cargo/: config.toml
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
auth-service/: .gitignore  Cargo.toml  Dockerfile  uml.md
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/domains/: user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
test_macros/: Cargo.toml
test_macros/src/: lib.rs
