[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-error = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
thiserror = "1.0.58"
color-eyre = "0.6.3"
secrecy = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.11.26", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }

[dev-dependencies]
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.0"
